# beam-bot

./: .dockerignore  .env.dist  .gitignore  .tool-versions  Dockerfile  Makefile  README.md  coveralls.json  docker-compose.yml  mix.exs
config/: config.exs  (+8 more)
rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
rust/.cargo/: config.toml
rust/.sqlx/: query-4fe99a7966990095eeef1812e49601ac451f68d17ee07e0897723889e9469fc2.json
rust/frontend/: package-lock.json
rust/migrations/: 20250707132732_create_trading_pairs.sql
rust/src/: lib.rs
rust/src/domain/: mod.rs
rust/src/domain/auth/: mod.rs
rust/src/domain/ports/: auth_repository.rs  binance_adapter.rs  klines_repository.rs  mod.rs  pub_sub.rs  trading_pair_repository.rs
rust/src/domain/trading_pairs/: mod.rs  trading_pair.rs
rust/src/infrastructure/: mod.rs  timeseriesdb.rs
rust/src/infrastructure/adapters/: binance_adapter.rs  composite_auth_repository.rs  jwt_repository.rs  mod.rs  rate_limiter.rs
rust/src/infrastructure/adapters/postgres/: auth_repository_postgres.rs  mod.rs  postgres_client.rs  trading_pair_repository_postgres.rs
rust/src/infrastructure/api/: mod.rs
rust/src/infrastructure/config/: binance_config.rs  config.rs  jwt.rs  mod.rs  postgres_config.rs
rust/src/use_cases/: auth.rs  mod.rs
rust/src/use_cases/exchanges/: mod.rs  sync_all_historycal_data.rs  sync_trading_pairs.rs
rust/tests/infrastructure/adapters/: binance_adapter_test.rs  mod.rs
rust/tests/infrastructure/config/: binance_config_test.rs  mod.rs  postgres_config_test.rs
(+200 files in other folders)
